# tetris-stm32f1

./: .gitignore  .gitlab-ci.yml  .gitmodules  .stlink.bash  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  LICENSE-OF-TEMPLATE  README.md  blink.c  blink.cpp  stm32f103c8t6.ld  tetris.c  tetris.jdebug
cmake/: blue-pill.cmake  freertos-libopencm3-glue.cmake  freertos.cmake  libopencm3.cmake  st-link.cmake  tetris-board.cmake  toolchain-arm-none-eabi.cmake
freertos_libopencm3/: glue.c
include/: FreeRTOSConfig.h  buttons.hpp  display.hpp  flash_rw.hpp  matrixFont.h  prng.hpp  tetris.hpp
src/: buttons.cpp  display.cpp  flash_rw.cpp  main.cpp  prng.cpp  tetris.c
